ecmascript/parser/tests/test262-error-references/fail/dd91200835f80228.js.stderr
error: Unterminated regexp literal
 --> $DIR/tests/test262-parser/fail/dd91200835f80228.js:1:9
  |
1 | var x = /
  |         ^

